--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1,15 +1,12 @@
 format_version: 4
-default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
+default_step_lib_source: https://github.com/ancha3/bitrise-steplib.git
 
 app:
   envs:
-  # An example secret param, define it (A_SECRET_PARAM) in .bitrise.secrets.yml
-  - A_SECRET_PARAM: $A_SECRET_PARAM
-  # If you want to share this step into a StepLib
   - BITRISE_STEP_ID: circular-dependency-checks
   - BITRISE_STEP_VERSION: "0.0.1"
   - BITRISE_STEP_GIT_CLONE_URL: https://github.com/ancha3/bitrise-step-circular-dependency-checks.git
-  - MY_STEPLIB_REPO_FORK_GIT_URL: $MY_STEPLIB_REPO_FORK_GIT_URL
+  - MY_STEPLIB_REPO_FORK_GIT_URL: https://github.com/ancha3/bitrise-steplib
 
 workflows:
   test:
