--- a/step.yml
+++ b/step.yml
@@ -19,33 +19,14 @@ support_url: https://github.com/ancha3/bitrise-step-circular-dependency-checks/i
 host_os_tags:
   - osx-10.10
   - ubuntu-16.04
+project_type_tags:
+  - react-native
 
-# If this step should be available only for certain project types
-# just uncomment this `project_type_tags` section and include all the
-# project types supported by the step. If the step can be used for all
-# project types then you can just remove this section.
-# If no `project_type_tags` specified (or specified as an empty array)
-# that means the step can be used for any project type.
-# You can find more information about project type tags in the Step Development Guideline:
-# https://github.com/bitrise-io/bitrise/blob/master/_docs/step-development-guideline.md
-#
-# project_type_tags:
-#   - ios
-#   - macos
-#   - android
-#   - xamarin
-#   - react-native
-#   - cordova
-#   - ionic
-
-# Type tags are used for categorizing steps, for easier step discovery in Step Libraries.
-# You can find more information about type tags in the Step Development Guideline:
-# https://github.com/bitrise-io/bitrise/blob/master/_docs/step-development-guideline.md
 type_tags:
   - utility
 
-is_requires_admin_user: true
-is_always_run: false
+is_requires_admin_user: false
+is_always_run: true
 is_skippable: false
 run_if: ""
 
@@ -62,26 +43,25 @@ toolkit:
   bash:
     entry_file: step.sh
 
-
 inputs:
-  - example_step_input: Default Value - you can leave this empty if you want to
+  - dir_path:
     opts:
-      title: "Example Step Input"
-      summary: Summary. No more than 2-3 sentences.
+      title: "Path to index.ts"
+      summary: Specify the index.ts filename with directory
       description: |
-        Description of this input.
-
-        Can be Markdown formatted text.
-      is_expand: true
+        Set this key for the specific file or directory to read. E.g ./src/index.ts
+      is_expand: false
       is_required: true
-      value_options: []
-
-outputs:
-  - EXAMPLE_STEP_OUTPUT:
+  - ts_config_path:
     opts:
-      title: "Example Step Output"
-      summary: Summary. No more than 2-3 sentences.
+      title: "TS Config file"
+      summary: "Typescript config filename and path. E,g ./tsconfig.json"
       description: |
-        Description of this output.
-
-        Can be Markdown formatted text.
+        Set this key to specify TypeScript config for resolving aliased modules.
+        Either a path to a tsconfig file or an object containing the config
+      is_expand: false
+      is_required: true
+outputs:
+  - CIRULAR_DEPENDENCY_LIST:
+    opts:
+      title: "List containing circular dependencies in the build"
