--- a/step.yml
+++ b/step.yml
@@ -1,12 +1,3 @@
-#
-# A couple of useful guides & docs:
-#
-# - Main Bitrise CLI docs: https://github.com/bitrise-io/bitrise/tree/master/_docs
-# - Step Development Guideline: https://github.com/bitrise-io/bitrise/blob/master/_docs/step-development-guideline.md
-# - Bitrise.yml format spec: https://github.com/bitrise-io/bitrise/blob/master/_docs/bitrise-yml-format-spec.md
-# - Bitrise docs: http://devcenter.bitrise.io/
-# - Bitrise CLI guides: http://devcenter.bitrise.io/bitrise-cli/
-
 title: |-
   circular-dependency-checks
 summary: |
@@ -21,6 +12,7 @@ host_os_tags:
   - ubuntu-16.04
 project_type_tags:
   - react-native
+  - typescript
 
 type_tags:
   - utility
@@ -31,13 +23,6 @@ is_skippable: false
 run_if: ""
 
 deps:
-  brew:
-  - name: git
-  - name: wget
-  apt_get:
-  - name: git
-  - name: wget
-
 
 toolkit:
   bash:
@@ -50,7 +35,7 @@ inputs:
       summary: Specify the index.ts filename with directory
       description: |
         Set this key for the specific file or directory to read. E.g ./src/index.ts
-      is_expand: false
+      is_expand: true
       is_required: true
   - ts_config_path:
     opts:
@@ -59,7 +44,7 @@ inputs:
       description: |
         Set this key to specify TypeScript config for resolving aliased modules.
         Either a path to a tsconfig file or an object containing the config
-      is_expand: false
+      is_expand: true
       is_required: true
   - circular_dep_count_threshold: 0
     opts:
@@ -69,7 +54,7 @@ inputs:
         Set this key to specify the threshold of circular dependencies allowed in the build.
         If it exceeds the threshold, the step will fail. Set to 0 if you do not want any 
         circular dependdencies in your build.
-      is_expand: false
+      is_expand: true
       is_required: true
 outputs:
   - TOTAL_CIRCULAR_DEPENDENCIES_COUNT:
